Fix CSS rule too large

--- a/ragna/deploy/_ui/css/chat_interface/button.css
+++ b/ragna/deploy/_ui/css/chat_interface/button.css
@@ -3,7 +3,7 @@
   color: gray;
 }
 
-.bk-btn {
+:host(.source-info-button) .bk-btn {
   border-radius: 0;
   padding: 0;
   font-size: 14px;
